# flowgen

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.test  build-deploy.sh  deploy-cloudrun.sh  docker-compose.yml  package-lock.json  package.json  service-account-permissions.sh
.github/workflows/: mermaid-ci.yml
docs/: README.md  deployment.md  development.md
scripts/: add-license.sh  build-deploy.sh  build.sh  deploy-vm.sh  deploy.sh
services/agent-orchestration/: .env.example  .gitignore  Agreement_Mapping_with_Filenames.csv  README.md  cloudrun-requirements.txt  pyproject.toml  sse-demo.html  vm-requirements.txt
services/agent-orchestration/scripts/: restart-server.sh
services/agent-orchestration/src/: .env.example  app.py  config.py
services/agent-orchestration/src/agents/: agent.py  callbacks.py  prompts.py  system_instructions.py  tools.py
services/agent-orchestration/src/agents/sub_agents/: __init__.py
services/agent-orchestration/src/agents/sub_agents/search_agent/: __init__.py  agent.py  prompts.py  tools.py
services/agent-orchestration/src/agents/tools/: __init__.py  document_understanding.py  search.py
services/agent-orchestration/src/app/: __init__.py  main.py
services/agent-orchestration/src/app/api/: __init__.py  utility_router.py
services/agent-orchestration/src/app/api/v1/: auth.py  endpoints.py
services/agent-orchestration/src/app/api/v1/routes/: __init__.py  agent.py  files_router.py  root_router.py
services/agent-orchestration/src/app/core/: config.py  logging.py
services/agent-orchestration/src/app/middleware/: session_middleware.py
services/agent-orchestration/src/app/models/: __init__.py  config.py  login.py
services/agent-orchestration/src/app/schemas/: __init__.py  request.py  response.py
services/agent-orchestration/src/app/services/: __init__.py  agent_service.py
services/agent-orchestration/src/app/staticfrontend/: router.py
services/agent-orchestration/src/app/utils/: dependencies.py  formatters.py  signed_url.py
services/agent-orchestration/src/config/: api.py
services/agent-orchestration/src/middleware/: session_middleware.py
services/agent-orchestration/src/routers/: agent_handler.py  dependencies.py  root_agent_router.py
services/agent-orchestration/src/routers/root_agent/: agent_handler.py  datamodels.py  dependencies.py  router.py
services/agent-orchestration/src/utils/: formatters.py
services/agent-orchestration/testdata/: Agreement Mapping.xlsx
services/agent-orchestration/tests/: conftest.py  test_app.py  test_root_agent.py
services/agent-orchestration/tests/middleware/: test_session_middleware.py
services/agent-orchestration/tests/routers/: test_agent_handler.py  test_dependencies.py
services/agent-orchestration/tests/utils/: test_formatters.py
services/backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
(+251 files in other folders)
